--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -165,3 +165,13 @@ body {
     transform: rotate(360deg);
   }
 }
+/* my profile */
+.profile-link {
+  padding: 8px 15px;
+  background-color: rgb(65, 35, 12);
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+  margin-right: 300px;
+}
