--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,7 @@
     <div id="head">
         <span class="material-symbols-outlined" id="logo">auto_stories</span>
         BookBuddy
+        <a href="/myprofile" class="profile-link">My Profile</a>
     </div>
     <div id="outer">
         <div id="tex">
